--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Document</title>
 </head>
 <body>
@@ -14,10 +15,65 @@
         <p id="testo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum placeat, voluptatem tenetur sint totam reprehenderit corrupti natus, debitis a porro perspiciatis officiis unde dicta eius culpa provident cum soluta voluptates!</p>
     </header>
     <main>
-        <div class="box marco">
-
+        <div class="box">
+            <div class="img-soggettoM">
+            </div>
+            <div class="contenitore">
+                <h2 class="soggetto">MARCO BIANCHI</h2>
+                <div class="bio">Designer</div>
+                <a href="mailto: marcobianchi@team.com" target="_blank" rel="noopener noreferrer" class="email"> marcobianchi@team.com</a>
+            </div>
         </div>
-        
+
+        <div class="box">
+            <div class="img-soggettoS">
+            </div>
+            <div class="contenitore">
+                <h2 class="soggetto">LAURA ROSSI</h2>
+                <div class="bio">Front-end Developer</div>
+                <a href="mailto: laurarossi@team.com" target="_blank" rel="noopener noreferrer" class="email"> laurarossi@team.com</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="img-soggettoG">
+            </div>
+            <div class="contenitore">
+                <h2 class="soggetto">GIORGIO VERDI</h2>
+                <div class="bio">Back-end Developer</div>
+                <a href="mailto: giorgioverdi@team.com" target="_blank" rel="noopener noreferrer" class="email"> giorgioverdi@team.com</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="img-soggettoMI">
+            </div>
+            <div class="contenitore">
+                <h2 class="soggetto">MARTA IPSUM</h2>
+                <div class="bio">SEO Specialist</div>
+                <a href="mailto: martaipsum@team.com" target="_blank" rel="noopener noreferrer" class="email"> martaipsum@team.com</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="img-soggettoR">
+            </div>
+            <div class="contenitore">
+                <h2 class="soggetto">ROBERTO LOREM</h2>
+                <div class="bio">Project Manager</div>
+                <a href="mailto: robertolorem@team.com" target="_blank" rel="noopener noreferrer" class="email"> rebertolorem@team.com</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="img-soggettoD">
+            </div>
+            <div class="contenitore">
+                <h2 class="soggetto">DANIELA AMET</h2>
+                <div class="bio">analyst</div>
+                <a href="danielaamet@team.com" target="_blank" rel="noopener noreferrer" class="email"> danielaamet@team.com</a>
+            </div>
+        </div>
     </main>
 </body>
 </html>
